--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -53,3 +53,10 @@ google-generativeai==0.8.3
 # ============================================
 pytest==7.4.3
 pytest-asyncio==0.21.1
+
+
+# ============================================
+# Document Generation (New)
+# ============================================
+python-docx==1.1.0
+openpyxl==3.1.2
