--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-# ForgeFlow Lite - Backend Dependencies
+# ForgeFlow - Backend Dependencies
 # Phase 1: 기반 구축
 
 # ============================================
@@ -7,6 +7,7 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
 python-multipart==0.0.6
+
 
 # ============================================
 # Database
@@ -19,7 +20,7 @@ alembic==1.12.1
 # Caching
 # ============================================
 redis==5.0.1
-hiredis==2.3.2  # Redis 성능 최적화
+hiredis==2.3.2
 
 # ============================================
 # Data Validation
@@ -39,24 +40,24 @@ httpx==0.25.1
 aiofiles==23.2.1
 
 # ============================================
-# Data Processing (Phase 4용, 사전 설치)
+# Data Processing
 # ============================================
 pandas==2.1.3
 
 # ============================================
-# AI/ML (Phase 2용, 사전 설치)
+# AI/ML
 # ============================================
 google-generativeai==0.8.3
 
 # ============================================
-# Testing (Optional)
+# Testing
 # ============================================
 pytest==7.4.3
 pytest-asyncio==0.21.1
-
 
 # ============================================
 # Document Generation (New)
 # ============================================
 python-docx==1.1.0
 openpyxl==3.1.2
+Pillow==10.2.0
