--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -25,8 +25,9 @@ hiredis==2.3.2
 # ============================================
 # Data Validation
 # ============================================
-pydantic==2.5.0
-pydantic-settings==2.1.0
+# LangChain requires pydantic>=2.5.2
+pydantic>=2.5.2
+pydantic-settings>=2.1.0
 
 # ============================================
 # Environment & Configuration
@@ -48,6 +49,16 @@ pandas==2.1.3
 # AI/ML
 # ============================================
 google-generativeai==0.8.3
+
+# ============================================
+# LangChain - LLM Framework
+# ============================================
+# LangChain Core - 기본 추상화 및 인터페이스
+langchain-core>=0.1.0
+# LangChain - 메인 프레임워크
+langchain>=0.1.0
+# LangChain Google Generative AI - Gemini 통합
+langchain-google-genai>=1.0.0
 
 # ============================================
 # Testing
